--- a/main.css
+++ b/main.css
@@ -22,17 +22,23 @@ a,.btn.btn-link {
 header {
     padding: 1em 5em;
     color: white;
+    background: #65B891;
 }
 
 .hero {
-    background: url('https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdff4c62302fd44491d4850202323d11&auto=format&fit=crop&w=1650&q=80');
+    background: url('https://images.unsplash.com/photo-1526455192392-2aec60ae8485?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=af18ae684049a7f73e2583d829b794c2&auto=format&fit=crop&w=1650&q=80');
+    background-size: cover;
+    background-position: top;
     height: 75vh;
 }
 
 .infoHero {
-    float: right;
-    margin: 8em 15em;
+    margin: 9em auto;
+    width: 50%;
+    padding: 1em;
+    text-align: center;
     color: white;
+    background: rgb(101, 184, 145,0.5)
 }
 
 .infoHero > h2 {
@@ -108,7 +114,7 @@ button:hover {
 
 .heading {
     text-align: center;
-    margin: 5em 0;
+    margin-bottom: 5em;
 }
 
 .heading > h5 {
@@ -121,7 +127,7 @@ button:hover {
 }
 
 .section {
-    margin: 10% 15%;
+    margin: 0 15%;
 }
 
 .infoBox {
@@ -150,4 +156,45 @@ button:hover {
 .contact {
     width: 50%;
     margin: 0 auto;
+}
+
+#content {
+    background: url('bg-stock.png');
+    background-attachment: fixed;
+    padding: 5em 0;
+}
+
+footer {
+    background: #65B891;
+    padding: 1em 5em;
+}
+
+ul {
+    margin: 0;
+    font-size: 10pt;
+}
+
+ul > a {
+    color: white;
+    padding: 0 0.5em;
+}
+
+ul > span {
+    float: right;
+    color: white;
+}
+
+a:visited {
+    color: white;
+}
+
+.button {
+    background-color: #65B891;
+    border-radius: 4px;
+    color: white;
+    box-shadow: 1px 1px 1px rgb(245, 245, 245);
+}
+ 
+textarea {
+    margin: 0.5em 0;
 }
