changed header height

--- a/assets/main.css
+++ b/assets/main.css
@@ -20,7 +20,7 @@ a,.btn.btn-link {
 }
 
 header {
-    padding: 0.5em 3em;
+    padding: 0 3em;
     color: white;
     background: rgb(57, 195, 239);
 }
